@@ -22,10 +22,6 @@ class named::non_chroot (
 
   $_rsync_user = "bind_dns_${::named::bind_dns_rsync}_rsync_${::environment}_${facts['os']['name']}_${facts['os']['release']['major']}"
 
-  if ( str2bool($::selinux_enforced) != true ) {
-    fail( 'named::non_chroot must be used with selinux!')
-  }
-
   simplib::validate_net_list($rsync_server)
 
   file { '/etc/named.conf':
@@ -34,15 +30,6 @@ class named::non_chroot (
     group   => 'named',
     mode    => '0640',
     notify  => Rsync['named_etc'],
-    require => Package['bind']
-  }
-
-  file { '/var/named':
-    ensure  => 'directory',
-    owner   => 'root',
-    group   => 'named',
-    mode    => '0750',
-    notify  => Rsync['named'],
     require => Package['bind']
   }
 
