@@ -1,3 +1,8 @@
+* Tue Aug 13 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.1-0
+- Allow users to force enabling/disabling of the chroot settings
+- Allow users to easily set the 'named_write_master_zones' SELinux boolean in
+  case they need to support dynamic DNS or zone transfers.
+
 * Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.1-0
 - Support puppetlabs/concat 6.x.
 
